# image-convolution

./: README.md  pyproject.toml
.github/workflows/: install-and-test.yml
image_convolver/: main.py
test/: tests.bash
